<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="CB_FeederMVCB_Sch" Id="{96e53339-b0cc-49c1-a00d-c077fe640396}">
    <Declaration><![CDATA[///////////
// Structure For Bousquet . Main Operating Data to be saved (ex: OPC).  
//////////

TYPE CB_FeederMVCB_Sch :
STRUCT
	//DI
	MesData					: CB   ;    (* Object*)
	MesComutLocal		    : BOOL ; 	(* The cell selector is in local position*)
	MesAlarmPwr		        : BOOL ; 	(* The cell motorization has a power supply fault*)
	MesEarth				: BOOL ; 	(* The cell is grounded (earthing)*)
	MesTripped	    	    : BOOL ; 	(* The cell is tripped (opened and locked due to alarm)*)
	OUT_CmdOpen				: BOOL ; 	(* The SCADA sends an Open command to the cell*)
	OUT_CmdClose			: BOOL ; 	(* The SCADA sends a Close command to the cell*)
	MesOpened_Sect			: BOOL ;    (* The associated switchgear is opened*)
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>